# timesheet

./: .gitignore  .worklog.hs.swp  Main.hs  default.nix  flake.nix  timesheet.cabal  timesheet.hs  worklog.hi  worklog.hs  x  x.aux  x.dvi
src/: Timesheet.hs
test/: Tests.hs
