name:                timesheet
version:             1.0
license:             BSD3
license-file:        LICENSE
author:              Daniel Lagos
maintainer:          daniel@artemis.mine.nu
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Timesheet
  build-depends:       base < 5,
                       attoparsec,
                       text,
                       random,
                       time,
                       containers,
                       directory
  default-language:    Haskell2010
  hs-source-dirs:      src

executable timesheet
  main-is:             Main.hs
  build-depends:       base < 5,
                       timesheet,
                       random,
                       time,
                       directory,
                       text,
                       containers
  default-language:    Haskell2010

test-suite timesheet-tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base < 5,
                       timesheet,
                       tasty,
                       tasty-hunit,
                       tasty-golden,
                       text,
                       time,
                       directory,
                       filepath,
                       containers
  default-language:    Haskell2010
  hs-source-dirs:      test
